2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/Crate_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Crate Line Item</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crate Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>