2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/BL__c.field-meta.xml
<CustomField>
    <fullName>BL__c</fullName>
    <formula>Crate__r.Job_Reference__r.OBL__c</formula>
    <label>BL</label>
    <type>Text</type>
</CustomField>