2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Collector_ID__c ,  Collector_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector</label>
    <type>Text</type>
</CustomField>