2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Collector_ID__c.field-meta.xml
<CustomField>
    <fullName>Collector_ID__c</fullName>
    <formula>Crate__r.myCollector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector ID</label>
    <type>Text</type>
</CustomField>