2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Collector_Name__c.field-meta.xml
<CustomField>
    <fullName>Collector_Name__c</fullName>
    <formula>Crate__r.myCollector__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector Name</label>
    <type>Text</type>
</CustomField>