2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <formula>TEXT(Crate__r.Country_of_Origin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of Origin</label>
    <type>Text</type>
</CustomField>