2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Crate__c.field-meta.xml
<CustomField>
    <fullName>Crate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crate</label>
    <referenceTo>Crate__c</referenceTo>
    <relationshipLabel>Crate Line Items</relationshipLabel>
    <relationshipName>Crate_Links</relationshipName>
    <type>Lookup</type>
</CustomField>