2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Crate_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Crate_Dimensions__c</fullName>
    <formula>Crate__r.Dimensions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate Dimensions</label>
    <type>Text</type>
</CustomField>