2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Crate_ID_barcode__c.field-meta.xml
<CustomField>
    <fullName>Crate_ID_barcode__c</fullName>
    <formula>Crate__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate ID (barcode)</label>
    <type>Text</type>
</CustomField>