2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Crate_No__c.field-meta.xml
<CustomField>
    <fullName>Crate_No__c</fullName>
    <formula>Crate__r.Crate_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate No.</label>
    <type>Text</type>
</CustomField>