2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Crate_Vol__c.field-meta.xml
<CustomField>
    <fullName>Crate_Vol__c</fullName>
    <formula>Crate__r.Crate_CBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate Vol (cbm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>