2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Job_Reference_ID__c ,  Job_Reference_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Reference</label>
    <type>Text</type>
</CustomField>