2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Job_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference_ID__c</fullName>
    <formula>Transaction__r.Job_Reference__c</formula>
    <label>Job Reference ID</label>
    <type>Text</type>
</CustomField>