2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Job_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference_Name__c</fullName>
    <formula>Transaction__r.Job_Reference__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Reference Name</label>
    <type>Text</type>
</CustomField>