2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/MAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWB__c</fullName>
    <formula>Crate__r.Job_Reference__r.MAWB__c</formula>
    <label>MAWB</label>
    <type>Text</type>
</CustomField>