2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <formula>Crate__r.Remarks__c</formula>
    <label>Remarks</label>
    <type>Text</type>
</CustomField>