2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Signed_by_HT__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_HT__c</fullName>
    <label>Signed by HT</label>
    <length>99</length>
    <type>Text</type>
</CustomField>