2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>artApp__Transaction__c</referenceTo>
    <relationshipLabel>Crate Line Items</relationshipLabel>
    <relationshipName>Crate_Links</relationshipName>
    <type>Lookup</type>
</CustomField>