2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Transaction_Collector__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Collector__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; + Transaction_Collector_ID__c ,  Transaction_Collector_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Collector</label>
    <type>Text</type>
</CustomField>