2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Transaction_Collector_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Collector_ID__c</fullName>
    <formula>Transaction__r.artApp__Collector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Collector ID</label>
    <type>Text</type>
</CustomField>