2nd training/Community/Community/Community1/force-app/main/default/objects/Crate_Line_Item__c/fields/Transaction_Collector_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Collector_Name__c</fullName>
    <formula>Transaction__r.artApp__Collector__r.Name</formula>
    <label>Transaction Collector Name</label>
    <type>Text</type>
</CustomField>